Changes for ESPER-578 Allowing transposing the result of an aggregation function to a stream
git-svn-id: http://svn.codehaus.org/esper/esper/branches/enhancements430@2509 d91eb1b3-1215-0410-9718-d41490442091